--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maritime Surveillance System</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <title>Naval Vanguard</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
-    <div id="map"></div>
-    <script src="app.js"></script>
+    <div id="map" style="height: 600px;"></div>
+    <script>
+        var map = L.map('map').setView([20.5937, 78.9629], 5); // Center on India
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+        }).addTo(map);
+
+        // Function to add a contact to the map
+        function addContact(lat, lon, type) {
+            L.marker([lat, lon]).addTo(map)
+                .bindPopup(type)
+                .openPopup();
+        }
+
+        // Example: Add a contact
+        addContact(12.34, 45.67, 'Cargo Ship');
+    </script>
 </body>
 </html>
